@@ -1,7 +1,8 @@
 
-2009-11-29  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2009-12-02  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
-	* gdb.py gdbmi.py : Fix gdb 7.0 causes exception on break.
+	* posix.py: Fix regression test suite hangs on futex.
+	* gdb.py gdbmi.py: Fix gdb 7.0 causes exception on break.
 	* gdbmi.py misc.py: Fix watched array elements are displayed in
 	lexicographical order instead of numeric order.
 	* gdb.py: Fix crash when running without a console.
